--- a/Basic_Molecular.Rmd
+++ b/Basic_Molecular.Rmd
@@ -68,4 +68,4 @@ Sanger, F., Nicklen, S., and Coulson, A. R. (1977). DNA sequencing with chain-te
 Yuwono, T. (2006) Biologi Molekular. Penerbit Erlangga. Pp. 269.
 
 ### How to cite this page?
-Lihat halaman depan web ini untuk mendapatkan detail tentang hak cipta
+Lihat halaman depan web ini untuk mendapatkan detail tentang hak cipta atau lihat di tautan berikt
