--- a/index.Rmd
+++ b/index.Rmd
@@ -9,11 +9,7 @@ _**Term of Reference (TOR)**_
 
 1. **Pendahuluan**
 
-Indonesia dikenal sebagai negara kepulauan dan memiliki keanekaragaman hayati yang cukup tinggi secara global. Sehingga pengelolaan sumber daya alam serta ekosistem yang terkait dibutuhkan untuk menunjang keberlanjutannya. Termasuk juga kerjasama yang erat antara peneliti, praktisi, konservasionis dan semua kalangan untuk melindungi dan mempelajari kekayaan alam tersebut. Kurangnya informasi dan akses terhadap teknologi terkini seringkali menjadi kendala bagi peneliti untuk mengembangkan diri dan penelitian itu sendiri.
-
-Infrastruktur dan pengetahuan riset yang mudah diakses perlu diperkaya dan diberikan terutama bagi peneliti Indonesia khususnya para peneliti dari Indonesia timur, yang mana Indonesia timur memiliki potensi sumberdaya alam yang sangat melimpah dan hal ini membutuhkan usaha penelitian yang lebih untuk menjaga sumber daya alam tersebut.
-
-Sebagai salah satu kontribusi untuk menyelesaikan masalah tersebut kami bertujuan untuk menyelenggarakan workshop melalui kelas pembelajaran dalam jaringan untuk membantu para peneliti mempelajari berbagai keterampilan dasar untuk menganalisis data molekuler. Saat ini penelitian seputar ekologi molekuler memainkan peran penting untuk mendeteksi spesies ataupun hubungan antara spesies dan lokasi dimana spesies tersebut ditemukan. Studi ekologi molekuler juga menjadi bagian yang vital sebagai landasan kebijakan terkait konservasi kawasan ataupun organisme jenis. Namun studi ini masih perlu diperluas lagi pembelajarannya sehingga dapat diimplementasikan secara langsung kepada penggiat, mahasiswa, pengajar ataupun peneliti yang ada di Indonesia. Upaya ini juga dilakukan untuk memahami keanekaragaman hayati dan pemilihan tindakan konservasi yang tepat untuk melindungi biota dan ekosistem.
+Sebagai salah satu kontribusi untuk memberikan akses luas dalam pembelajaran ilmu ekologi molekuler  kami bertujuan untuk menyelenggarakan workshop melalui kelas pembelajaran dalam jaringan untuk membantu para peneliti mempelajari berbagai keterampilan dasar untuk menganalisis data molekuler. Saat ini penelitian seputar ekologi molekuler memainkan peran penting untuk mendeteksi spesies ataupun hubungan antara spesies dan lokasi dimana spesies tersebut ditemukan. Studi ekologi molekuler juga menjadi bagian yang vital sebagai landasan kebijakan terkait konservasi kawasan ataupun organisme jenis. Namun studi ini masih perlu diperluas lagi pembelajarannya sehingga dapat diimplementasikan secara langsung kepada penggiat, mahasiswa, pengajar ataupun peneliti yang ada di Indonesia. Upaya ini juga dilakukan untuk memahami keanekaragaman hayati dan pemilihan tindakan konservasi yang tepat untuk melindungi biota dan ekosistem.
 
 **2. Detail Kegiatan**
 
@@ -25,14 +21,10 @@ Kegiatan ini menargetkan total 35 orang peserta, dengan sistem rekrutmenterbuka.
 
 Tim pemateri dan pelaksana workshop berasal dari BIONESIA yaitu:
 
-1. Ni Kadek Dita Cahyani, Ph.D.
-  1. Materi yang akan dibawakan adalah &quot;Editing Sekuen menggunakan Software MEGA X&quot; dan &quot;DNA Barcoding&quot;.
-2. Yuliana Fitri Syamsuni, Ph.D.c.
-  1. Materi yang akan dibawakan adalah &quot;Genetika Populasi&quot;
-3. Aji Wahyu Anggoro, Ph.D.c.
-  1. Materi yang akan dibawakan adalah &quot;Pengenalan R&quot;
-4. Eka Maya Kurniasih, M.Si. dan Danie Al Malik, S.Kel.
-  1. Teknis kegiatan, surat menyurat dan _contact person_
+1. Ni Kadek Dita Cahyani, Ph.D.--> &quot;Editing Sekuen menggunakan Software MEGA X&quot; dan &quot;DNA Barcoding&quot;.
+2. Yuliana Fitri Syamsuni, Ph.D.c. --> &quot;Genetika Populasi&quot;
+3. Aji Wahyu Anggoro, Ph.D.c. --> &quot;Pengenalan R&quot;
+4. Eka Maya Kurniasih, M.Si. dan Danie Al Malik, S.Kel. --> Teknis kegiatan dan _contact person_
 
 Pada setiap kegiatan, kami akan mengundang satu pembicara yang merupakan akademisi atau peneliti Indonesia yang berafiliasi dengan perguruan tinggi atau institusi di Indonesia atau luar negeri. Harapannya, akan terjalin komunikasi dan kerjasama untuk penelitian ke depannya.
 
