--- a/setup.Rmd
+++ b/setup.Rmd
@@ -1,27 +1,78 @@
+
 ---
-title: "Setup Instructions"
+title: "Introduction to R"
+output:
+  html_document:
+    df_print: paged
 ---
 
-## Software
+```{r, echo=FALSE}
+options(repos = list(CRAN="http://cran.rstudio.com/"))
+```
+$$\\[0.1in]$$
 
-### R
+### Sofware Installation
+
+#### 1. Installing R
 
 **Install R.** You'll need R version **3.4.0** or higher.[^rversion] Download and install R for [Windows](http://cran.r-project.org/bin/windows/base/) or [Mac](http://cran.r-project.org/bin/macosx/) (download the latest R-3.x.x.pkg file for your appropriate version of Mac OS).
 
-### RStudio
+#### 2. Installing RStudio
 
 Download and install **[RStudio Desktop](https://www.rstudio.com/products/rstudio/download/)** version >= 1.0.143.
 
 R and RStudio are separate downloads and installations. **R** is the underlying statistical computing environment, but using R alone is no fun. **RStudio** is a graphical integrated development environment that makes using R much easier. You need R installed before you install RStudio.
 
-### CRAN packages
+**Open your RStudio and see how it looks like** 
+
+**R studio Interfaces** 
+
+![](/Users/IBRC/Downloads/anatomyofrstudio.png)  
+
+#### 3. Understanding R Components
+
+**Two Components of R that we need to Understand**
+
+1. Data and packages 
+- A group of pre-made scripts that have been writen to answer or analyze specific type of questions or data
+- Data from your observations
+2. Syntax or script related with the packages
+- Modifying scripts that suits your needs and the plots that you are about to produce
+
+
+$$\\[0.1in]$$
+
+
+### Working Directory
+
+#### 3. Opening Rstudio and Determining Working Directory 
+
+![](/Users/IBRC/Downloads/wd.png)
+
+or through simple script   
+
+
+```{r}
+setwd("/Users/IBRC/Downloads/2021Course-master")
+```
+$$\\[0.05in]$$
+
+
+### Package installation and Activation
+$$\\[0.05in]$$
+
+#### 4. Installing packages from CRAN packages
 
 Launch RStudio (RStudio, *not R itself*). Ensure that you have internet access, then copy and paste the following command into the **Console** panel (usually the lower-left panel, by default) and hit the Enter/Return key. 
 
-```r
-install.packages("tidyverse")
-```
+**Skip this step, as many of you hopefully have done this before the course is started**
 
+```r
+#install.packages(c("tidyverse","ggplot2","ggtree", "dplyr", "gapminder","phylobase", "ape","remotes","readxl","gcookbook","haven","remotes"))
+#remotes::install_github("YuLab-SMU/ggtree")
+#library("ggtree"))
+
+```
 
 _A few notes_:
 
@@ -29,97 +80,207 @@ _A few notes_:
 - You must be connected to the internet.
 - The [tidyverse](http://tidyverse.org/) package is kind of a meta-package that automatically installs/loads many core packages that we use throughout the workshops.[^tidyverse]
 - Even if you've installed these packages in the past, do re-install the most recent version. Many of these packages are updated often, and we may use new features in the workshop that aren't available in older versions.
-- If you're using Windows you might see errors about not having permission to modify the existing libraries -- disregard these. You can avoid this by running RStudio as an administrator (right click the RStudio icon, then click "Run as Administrator").
+
+
+<!-- [^tidyverse] Installing/loading the tidyverse **tidyverse** will install/load the core tidyverse packages that you are likely to use in almost every analysis:  -->
+
+<!-- - **ggplot2** (for data visualisation)   -->
+<!-- - **dplyr** (for data manipulation)    -->
+<!-- - **tidyr** (for data tidying) -->
+<!-- - **readr** (for data import) -->
+<!-- - **purrr** (for functional programming) -->
+<!-- - **tibble** (for tibbles, a modern re-imagining of data frames).  -->
+
+**Find pacakges that suits your needs. This mostly can come from papers or publications in your fields or from R community through social media**
 
 [^rversion]: R version 3.4.0 was released April 2017. If you have not updated your R installation since then, you need to upgrade to a more recent version, since several of the required packages depend on a version at least this recent. You can check your R version with the `sessionInfo()` command.
 
-[^tidyverse]: Installing/loading the tidyverse **tidyverse** will install/load the core tidyverse packages that you are likely to use in almost every analysis:
-**ggplot2** (for data visualisation), **dplyr** (for data manipulation), **tidyr** (for data tidying), **readr** (for data import), **purrr** (for functional programming), and **tibble** (for tibbles, a modern re-imagining of data frames). It also installs a selection of other tidyverse packages that you're likely to use frequently, but probably not in every analysis (these are installed, but you'll have to load them separately with `library(packageName)`). This includes: **hms** (for times), **stringr** (for strings), **lubridate** (for date/times), **forcats** (for factors), **DBI** (for databases), **haven** (for SPSS, SAS and Stata files), **httr** (for web apis), **jsonlite** (or JSON), **readxl** (for .xls and .xlsx files), **rvest** (for web scraping), **xml2** (for XML), **modelr** (for modelling within a pipeline), and **broom** (for turning models into tidy data). After installing tidyverse with `install.packages("tidyverse")` and loading it with `library(tidyverse)`, you can use `tidyverse_update()` to update all the tidyverse packages installed on your system at once.
+
+[^tidyverse]:It also installs a selection of other tidyverse packages that you're likely to use frequently, but probably not in every analysis (these are installed, but you'll have to load them separately with `library(packageName)`). This includes: **hms** (for times), **stringr** (for strings), **lubridate** (for date/times), **forcats** (for factors), **DBI** (for databases), **haven** (for SPSS, SAS and Stata files), **httr** (for web apis), **jsonlite** (or JSON), **readxl** (for .xls and .xlsx files), **rvest** (for web scraping), **xml2** (for XML), **modelr** (for modelling within a pipeline), and **broom** (for turning models into tidy data). After installing tidyverse with `install.packages("tidyverse")` and loading it with `library(tidyverse)`, you can use `tidyverse_update()` to update all the tidyverse packages installed on your system at once.
 
 Check that you've installed everything correctly by closing and reopening RStudio and entering the following commands at the console window (don't worry about the _Conflicts with tidy packages_ warning):
 
-```r
-library(tidyverse)
-```
+$$\\[0.02in]$$
+**Another way of Installing Packages**
 
-This may produce some notes or other output, but as long as you don't get an error message, you're good to go. If you get a message that says something like: `Error in library(somePackageName) : there is no package called 'somePackageName'`, then the required packages did not install correctly. Please do not hesitate to email me _prior to the course_ if you are still having difficulty. In this email, please copy and paste what you typed in the console, and all of the output that streams by in the console.
+![](/Users/IBRC/Desktop/library.png)
+$$\\[0.05in]$$
 
-### Bioconductor
-
-For some classes (e.g., RNA-seq), you'll need to install a few [Bioconductor](http://bioconductor.org/) packages. These packages are installed differently than "regular" R packages from CRAN. Copy and paste these lines of code into your R console **one at a time**. 
+**4.1 Activating packages from CRAN packages**
 
 ```r
-source("http://bioconductor.org/biocLite.R")
-biocLite()
-biocLite("DESeq2")
-biocLite("ggtree")
+#library(c("tidyverse","ggplot2", "dplyr", "gapminder","phylobase", "ape","remotes","readxl","gcookbook","haven","remotes"))
 ```
 
-A few notes:
+This may produce some notes or other output, but as long as you don't get an error message, you're good to go. If you get a message that says something like: `Error in library(somePackageName) : there is no package called 'somePackageName'`, then the required packages did not install correctly. 
 
-- We will be using the latest versions of Bioconductor from the 3.5 release. This requires R version 3.4.0 or higher. If you have R 3.4.0 installed, running the commands above will install Bioconductor 3.5. See <http://bioconductor.org/news/bioc_3_5_release/>.
-- If at any point in the Bioconductor package installations you get prompts in the console asking you to update any existing packages, type `n` at the prompt at hit enter.
-- If you see a note long the lines of "_binary version available but the source version is later_", followed by a question, "_Do you want to install from sources the package which needs compilation? y/n_", type **`n` for no**, and hit enter.
+$$\\[0.2in]$$
 
-Check that you've installed everything correctly by closing and reopening RStudio and entering the following commands at the console window, one at a time:
 
-```r
-library(DESeq2)
-library(ggtree)
+#### 5. Importing and Exporting Files into R Environment 
+
+**Loading Delimited Text Data File into R environment**
+
+- Make sure you know the path of the your file or simply place the file on your working directory  
+
+- See Following Example
+```{r}
+data <- read.csv("/Users/IBRC/Downloads/datafile.txt")
+head (data) 
+
 ```
 
-If you get a message that says something like: `Error in library(somePackageName) : there is no package called 'somePackageName'`, then the required packages did not install correctly. Please do not hesitate to email me _prior to the course_ if you are still having difficulty. In this email, please copy and paste what you typed in the console, and all of the output that streams by in the console.
+$$\\[0.2in]$$
 
 
-### RMarkdown
+**Loading Data from an Excel File**
 
-Several additional setup steps required for the reproducible research with RMarkdown class.
 
-1. First, install R, RStudio, and the tidyverse package as described above. Also install the knitr and rmarkdown packages.
-```r
-install.packages("knitr")
-install.packages("rmarkdown")
+```{r}
+#install.packages("readxl")
+library(readxl)
+data <- read_excel("/Users/IBRC/Downloads/datafile.xlsx", 1)
+head(data)
 ```
-1. Next, launch RStudio (not R). Click File, New File, R Markdown. This may tell you that you need to install additional packages (`knitr`, `yaml`, `htmltools`, `caTools`, `bitops`, `rmarkdown`, and maybe a few others). Click "Yes" to install these.
-1. **_Optional_:** If you want to convert to PDF, you will need to install a **$\LaTeX$** typesetting engine. This differs on Mac and Windows. _Note that this part of the installation may take up to several hours, and isn't strictly required for the class._
-    - **Windows**: Download and install MiKTeX: <https://miktex.org/download>. Read the installation tutorial first at <https://miktex.org/howto/install-miktex>.
-    - **Mac**: Download and install MacTeX.pkg at <http://www.tug.org/mactex/mactex-download.html>. This is a very large download (>2 gigabytes), and may take a while depending on your network speed. Do this _prior to the course_.
+
+```{r}
+# Only need to install the first time
+#install.packages("haven")
+
+#library(haven)
+#data <- read_sav("/Users/IBRC/Downloads/datafile.sav")
+```
+
+$$\\[0.2in]$$
+
+**Typing Data Manually from R Environment**
 
 
-## Get Data
+```{r}
+data <- data.frame(x1 = c(1, 2, 3, 4),          
+                  x2 = c(5, 6, 7, 8),
+                  x3 = c(9, 10, 11, 12))
+data
+#write.table(data, file = "data.csv",sep="\t", row.names=FALSE)
 
-Click the **[<i class="fa fa-download"></i> Data](data.html)** link on the navbar at the top. You can download all the data needed by downloading **[this zip file <i class="fa fa-file-archive-o" aria-hidden="true"></i>](data.zip)** or by downloading individual data sets as needed at the **[<i class="fa fa-download"></i> Data](data.html)** page.
-
-
-## Required Reading
-
-### Tidy Data
-
-1. "For Big-Data Scientists, Janitor Work Is Key Hurdle to Insights." _The New York Times_, August 8, 2014. Available at: <https://nyti.ms/2jNUfHo>.
-1. Sections 1-3 of [Wickham, H. "Tidy Data." _Journal of Statistical Software_ 59:10 (2014)](http://www.jstatsoft.org/article/view/v059i10/v59i10.pdf).
-1. Click through each section of [stephenturner.us/dataorganization/](http://stephenturner.us/dataorganization/).
-
-### RMarkdown Background
-
-Spend a few minutes to learn a little bit about _Markdown_. All you really need to know is that Markdown is a lightweight markup language that lets you create styled text (like **bold**, _italics_, [links](http://bioconnector.org/markdown), etc.) using a very lightweight plain-text syntax: `(like **bold**, _italics_, [links](http://bioconnector.org/markdown), etc.)`. The resulting text file can be _rendered_ into many downstream formats, like PDF (for printing) or HTML (websites).
-
-1. _(30 seconds)_ Read the summary paragraph on the [Wikipedia page](https://en.wikipedia.org/wiki/Markdown). 
-1. _(1 minute)_ Bookmark and refer to this markdown reference: <http://commonmark.org/help/>.
-1. _(5-10 minutes)_ Run through this 10-minute in-browser markdown tutorial: <http://commonmark.org/help/tutorial/>.
-1. _(5-10 minutes)_ Go to <http://dillinger.io/>, an in-browser Markdown editor, and play around. Write a simple markdown document, and export it to HTML and/or PDF.
-1. _(10 minutes)_ See RStudio's excellent documentation on Rmarkdown at <http://rmarkdown.rstudio.com/>. Click "Getting Started" and watch the 1 minute video on the [Introduction page](http://rmarkdown.rstudio.com/lesson-1.html). Continue reading through each section here on the navigation bar to the left (_Introduction_ through _Cheatsheets_, and optionally download and print out the cheat sheet). Finally, browse through the [RMarkdown Gallery](http://rmarkdown.rstudio.com/gallery.html). 
-1. _(0 seconds)_ No need to look now, but don't forget that the course [help page](help.html) has some [useful resources on Markdown+RMarkdown](help.html#markdown-rmarkdown-resources).
+```
 
 
-### Phylogenetic trees
+$$\\[0.2in]$$
+**Importing from R interface**
 
-1. How to read a phylogeny [epidemic.bio.ed.ac.uk/how_to_read_a_phylogeny](http://epidemic.bio.ed.ac.uk/how_to_read_a_phylogeny).
+![](/Users/IBRC/Desktop/import_f2.png) 
+![](/Users/IBRC/Desktop/import_f1.png)
 
-### RNA-seq
+$$\\[0.1in]$$
 
-1. [Conesa et al. A survey of best practices for RNA-seq data analysis. _Genome Biology_ 17:13 (2016)](http://genomebiology.biomedcentral.com/articles/10.1186/s13059-016-0881-8).
-1. [Soneson et al. "Differential analyses for RNA-seq: transcript-level estimates improve gene-level inferences." _F1000Research_ 4 (2015)](https://f1000research.com/articles/4-1521/v2).
-1. Abstract and introduction sections of [Himes et al. "RNA-Seq transcriptome profiling identifies CRISPLD2 as a glucocorticoid responsive gene that modulates cytokine function in airway smooth muscle cells." _PLoS ONE_ 9.6 (2014): e99625](http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0099625).
+#### Quick Review of what we just learned
+
+- Installing Rstudio and R  
+- Installing and activating Packages
+- Importing data from various sources
+
+$$\\[0.1in]$$
+
+#### 6. Exploring data through plots
+
+![](/Users/IBRC/Downloads/chart-chooser-data-visualization.png)
+$$\\[0.2in]$$
+
+#### 6.1 Exploring data through plots
+
+**Making a Basic and Modified Scatter Plot**
+
+```{r}
+#install.packages(c("gcookbook","dplyr","ggplot2"))
+library(gcookbook) # Load gcookbook for the heightweight data set
+library(dplyr) # Load dplyr package
+library(ggplot2)
+data(heightweight)
+heightweight=select(heightweight,ageYear, heightIn)
+ggplot(heightweight, aes(x = ageYear, y = heightIn)) + 
+geom_point() +
+ggtitle("Basic R Scatter Plot") + 
+theme(plot.title = element_text(hjust = 0.5))
+```
+$$\\[0.1in]$$
 
 
-----
+```{r}
+
+ggplot(heightweight, aes(x = ageYear, y = heightIn)) + geom_point(shape = 21) +
+  ggtitle("Basic R Scatter Plot With Different Shape") + 
+  theme(plot.title = element_text(hjust = 0.5))
+```
+$$\\[0.2in]$$
+
+**Shapes and its associated numbering category**
+![](/Users/IBRC/Downloads/FIG-SCATTER-SHAPES-CHART-1.png)
+
+ <b>Image Credits - Fig.2 - 4K Mountains Wallpaper</b>
+
+$$\\[0.2in]$$
+
+```{r}
+ggplot(heightweight, aes(x = ageYear, y = heightIn)) + geom_point(size = 4) +
+    ggtitle("Basic R Scatter Plot With Bigger Point Size") + 
+    theme(plot.title = element_text(hjust = 0.5))
+
+```
+$$\\[0.2in]$$
+
+```{r}
+data(heightweight)
+ggplot(heightweight, aes(x = ageYear, y = heightIn, shape = sex, colour = sex)) + geom_point(size = 3) + 
+  ggtitle("Scatter Plot With Colour Based on Factors") + theme(plot.title = element_text(hjust = 0.5))
+
+```
+
+$$\\[0.2in]$$
+**Creating Unique Plot in R**
+
+A plot example as published in the economist 
+
+![](/Users/IBRC/Downloads/theeconomist.png)
+
+```{r}
+library(gapminder)
+library(dplyr)
+library(ggplot2)
+
+data(gapminder)
+head(gapminder)
+data <- gapminder %>% filter(year=="2007") %>% dplyr::select(-year)
+head(data)
+
+# Most basic bubble plot
+ggplot(data, aes(x=gdpPercap, y=lifeExp, size = pop)) + 
+geom_point(alpha=0.7)
+
+```
+
+```{r}
+# Most basic bubble plot
+
+data %>% arrange(desc(pop)) %>% mutate(country = factor(country, country))
+data %>%
+  arrange(desc(pop)) %>% # Arrange population as descending 
+  mutate(country = factor(country, country)) %>% #creating and converting "country" into factor
+  ggplot(aes(x=gdpPercap, y=lifeExp, size = pop)) + # Deciding x and y axes
+    geom_point(alpha=0.5) +
+    scale_size(range = c(.1, 15), name="Population (M)") # maximum circle size
+```
+
+```{r}
+# Adding fourth dimension and embed colour
+
+data %>% arrange(desc(pop)) %>% mutate(country = factor(country, country))
+data %>%
+  arrange(desc(pop)) %>% # Arrange population as descending 
+  mutate(country = factor(country, country)) %>% #creating and converting "country" into factor
+  ggplot(aes(x=gdpPercap, y=lifeExp, size = pop, color=continent)) + # Deciding x and y axes
+    geom_point(alpha=0.5) +
+    scale_size(range = c(.1, 24), name="Population (M)")
+```
+
+
